-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The attached test fails with the following fatal error when run with -XX:+UseNullableValueFlattening:
$ javac --enable-preview --source 25 --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED Test.java && java --enable-preview --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED -Xcomp -XX:CompileOnly=Test*::test -XX:+UseNullableValueFlattening Test
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/christian/valhalla2/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:846), pid=360867, tid=360868
# fatal error: DEBUG MESSAGE: null oop passed to encode_heap_oop_not_null2
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (slowdebug build 25-lworld5ea-LTS-2025-04-22-1113203.christian...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 25-lworld5ea-LTS-2025-04-22-1113203.christian..., compiled mode, tiered, compressed oops, compressed class ptrs, serial gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x16c3165] MacroAssembler::debug64(char*, long, long*)+0xf9
............
Command Line: --enable-preview --add-exports=java.base/jdk.internal.value=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED -Xcomp -XX:CompileOnly=Test*::test -XX:+UseNullableValueFlattening Test
............
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x16c3165] MacroAssembler::debug64(char*, long, long*)+0xf9 (macroAssembler_x86.cpp:846)
$ javac --enable-preview --source 25 --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED Test.java && java --enable-preview --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED -Xcomp -XX:CompileOnly=Test*::test -XX:+UseNullableValueFlattening Test
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/christian/valhalla2/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:846), pid=360867, tid=360868
# fatal error: DEBUG MESSAGE: null oop passed to encode_heap_oop_not_null2
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (slowdebug build 25-lworld5ea-LTS-2025-04-22-1113203.christian...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 25-lworld5ea-LTS-2025-04-22-1113203.christian..., compiled mode, tiered, compressed oops, compressed class ptrs, serial gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x16c3165] MacroAssembler::debug64(char*, long, long*)+0xf9
............
Command Line: --enable-preview --add-exports=java.base/jdk.internal.value=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED -Xcomp -XX:CompileOnly=Test*::test -XX:+UseNullableValueFlattening Test
............
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x16c3165] MacroAssembler::debug64(char*, long, long*)+0xf9 (macroAssembler_x86.cpp:846)
- caused by
-
JDK-8341767 [lworld] JIT support for nullable, atomic, flat arrays
-
- Resolved
-
- relates to
-
JDK-8355382 [lworld] Optimization added by JDK-8228622 only applies to null-free, flat arrays
-
- Open
-
- links to
-
Commit(lworld)
openjdk/valhalla/ad591c50
-
Review(lworld)
openjdk/valhalla/1441