8355317: [lworld] C2 Runtime load_unknown_inline should not return null-free type